@@ -34,8 +34,8 @@ POSSIBILITY OF SUCH DAMAGE.
 #define TORRENT_VERSION_HPP_INCLUDED
 
 #define LIBTORRENT_VERSION_MAJOR 0
-#define LIBTORRENT_VERSION_MINOR 10
+#define LIBTORRENT_VERSION_MINOR 11
 
-#define LIBTORRENT_VERSION "0.10.0.0"
+#define LIBTORRENT_VERSION "0.11.0.0"
 
 #endif
